--- a/Home.html
+++ b/Home.html
@@ -53,7 +53,7 @@
     <section class="u-black u-clearfix u-section-2" id="sec-870c">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h3 class="u-custom-font u-font-playfair-display u-text u-text-default u-text-1">Our Team</h3>
-        <div class="u-gallery u-layout-grid u-lightbox u-no-transition u-show-text-none u-gallery-1">
+        <div class="u-expanded-width-xs u-gallery u-layout-grid u-lightbox u-no-transition u-show-text-none u-gallery-1">
           <div class="u-gallery-inner u-gallery-inner-1">
             <div class="u-effect-hover-zoom u-gallery-item u-shape-rectangle" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">
               <div class="u-back-slide">
@@ -84,12 +84,16 @@
             </div>
           </div>
         </div>
-        <h1 class="u-custom-font u-font-playfair-display u-text u-text-default u-title u-text-2">Bianka Kieska, CFO</h1>
+        <h1 class="u-custom-font u-font-playfair-display u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-title u-text-2">Bianka Kieska, CFO</h1>
         <h2 class="u-custom-font u-font-playfair-display u-subtitle u-text u-text-default u-text-3">Jacob Desantis, Political Advisor</h2>
         <h1 class="u-custom-font u-font-playfair-display u-text u-text-default u-title u-text-4">Samantha Moretti, CEO</h1>
         <h5 class="u-align-center u-custom-font u-font-merriweather u-text u-text-5"> With an extensive family background in banking and finance all over the world, this young entrepreneur has a nose for money.&nbsp; She has singlehandedly made a name for herself as the "Crypto Cunny".</h5>
-        <p class="u-align-center u-custom-font u-font-merriweather u-small-text u-text u-text-variant u-text-6"> Three time winner of annual fourth of July hotdog eating contest, this American patriot leads Shaft Holdings toward the bald eagle every day.  Jacob is a great representation of our hunger for success and our insatiability when making money.</p>
-        <h5 class="u-align-center u-custom-font u-font-merriweather u-text u-text-7">18/ F/ Femdom</h5>
+        <h5 class="u-align-center u-custom-font u-font-merriweather u-text u-text-6">18/ F/ Fe​mdom</h5>
+        <div class="u-black u-container-style u-expanded-width-xs u-group u-shape-rectangle u-group-1">
+          <div class="u-container-layout u-container-layout-1">
+            <h6 class="u-custom-font u-font-merriweather u-text u-text-default-xs u-text-7"> Three time winner of annual fourth of July hotdog eating contest, this American patriot leads Shaft Holdings toward the bald eagle every day.  Jacob is a great representation of our hunger for success and our insatiability when making money. </h6>
+          </div>
+        </div>
       </div>
     </section>
     
