--- a/Home.html
+++ b/Home.html
@@ -34,7 +34,7 @@
                 <img class="u-expanded-width u-image u-image-default u-image-1" src="images/E35A53EB-D07E-415F-A58D-0A051C2B9567.png" alt="" data-image-width="980" data-image-height="433">
                 <h2 class="u-custom-font u-font-ubuntu u-text u-text-default u-text-1"></h2>
                 <h1 class="u-custom-font u-font-playfair-display u-text u-text-default u-text-2">Making millionaires since 2022.</h1>
-                <h5 class="u-custom-font u-font-playfair-display u-text u-text-3"> Whether you’re a janitor or a CEO, Shaft Holdings Group will deliciously make your funds, no matter how big or small, become erect.&nbsp;</h5>
+                <h5 class="u-align-center-xs u-custom-font u-font-playfair-display u-text u-text-3"> Whether you’re a janitor or a CEO, Shaft Holdings Group will deliciously make your funds, no matter how big or small, become erect.&nbsp;</h5>
               </div>
             </div>
             <div class="u-container-style u-layout-cell u-size-33 u-layout-cell-2">
@@ -42,7 +42,7 @@
                 <h2 class="u-custom-font u-font-merriweather u-text u-text-4">Contact Us:<br>
                   <br>
                 </h2>
-                <a href="https://nicepage.site" class="u-border-1 u-border-active-palette-2-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-btn u-button-style u-none u-text-palette-1-base u-btn-1"> https://discord.gg/zQprYSQG2p</a>
+                <a href="https://discord.gg/zQprYSQG2p" class="u-border-1 u-border-active-palette-2-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-btn u-button-style u-none u-text-palette-1-base u-btn-1" target="_blank"> https://discord.gg/zQprYSQG2p</a>
                 <img class="u-image u-image-default u-image-2" src="images/michael-corleone-vs-tony-montana-who-wins-mob-fight_5.jpg" alt="" data-image-width="525" data-image-height="261">
               </div>
             </div>
