--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <meta property="og:title" content="Home">
     <meta property="og:type" content="website">
   </head>
-  <body data-home-page="https://website3475350.nicepage.io/Home.html?version=15b4f2c5-3fa2-459c-8669-a4e170e4fc93" data-home-page-title="Home" class="u-body u-xl-mode" data-lang="en">
+  <body data-home-page="https://website3475350.nicepage.io/Home.html?version=a45f1adf-8db4-4921-843e-59de7f1c1f40" data-home-page-title="Home" class="u-body u-xl-mode" data-lang="en">
     <section class="u-black u-clearfix u-section-1" id="carousel_bbe9">
       <div class="u-clearfix u-layout-wrap u-layout-wrap-1">
         <div class="u-layout">
@@ -34,7 +34,7 @@
                 <img class="u-expanded-width u-image u-image-default u-image-1" src="images/E35A53EB-D07E-415F-A58D-0A051C2B9567.png" alt="" data-image-width="980" data-image-height="433">
                 <h2 class="u-custom-font u-font-ubuntu u-text u-text-default u-text-1"></h2>
                 <h1 class="u-custom-font u-font-playfair-display u-text u-text-default u-text-2">Making millionaires since 2022.</h1>
-                <h5 class="u-align-center-xs u-custom-font u-font-playfair-display u-text u-text-3"> Whether you’re a janitor or a CEO, Shaft Holdings Group will deliciously make your funds, no matter how big or small, become erect.&nbsp;</h5>
+                <h5 class="u-custom-font u-font-playfair-display u-text u-text-3"> Whether you’re a janitor or a CEO, Shaft Holdings Group will deliciously make your funds, no matter how big or small, become erect.&nbsp;</h5>
               </div>
             </div>
             <div class="u-container-style u-layout-cell u-size-33 u-layout-cell-2">
@@ -50,10 +50,10 @@
         </div>
       </div>
     </section>
-    <section class="u-black u-clearfix u-section-2" id="sec-870c">
+    <section class="u-black u-border-2 u-border-grey-75 u-clearfix u-section-2" id="sec-870c">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h3 class="u-custom-font u-font-playfair-display u-text u-text-default u-text-1">Our Team</h3>
-        <div class="u-expanded-width-xs u-gallery u-layout-grid u-lightbox u-no-transition u-show-text-none u-gallery-1">
+        <div class="u-gallery u-layout-grid u-lightbox u-no-transition u-show-text-none u-gallery-1">
           <div class="u-gallery-inner u-gallery-inner-1">
             <div class="u-effect-hover-zoom u-gallery-item u-shape-rectangle" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">
               <div class="u-back-slide">
@@ -84,15 +84,14 @@
             </div>
           </div>
         </div>
-        <h1 class="u-custom-font u-font-playfair-display u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-title u-text-2">Bianka Kieska, CFO</h1>
+        <h1 class="u-custom-font u-font-playfair-display u-text u-text-default u-title u-text-2">Bianka Kieska, CFO</h1>
         <h2 class="u-custom-font u-font-playfair-display u-subtitle u-text u-text-default u-text-3">Jacob Desantis, Political Advisor</h2>
         <h1 class="u-custom-font u-font-playfair-display u-text u-text-default u-title u-text-4">Samantha Moretti, CEO</h1>
         <h5 class="u-align-center u-custom-font u-font-merriweather u-text u-text-5"> With an extensive family background in banking and finance all over the world, this young entrepreneur has a nose for money.&nbsp; She has singlehandedly made a name for herself as the "Crypto Cunny".</h5>
         <h5 class="u-align-center u-custom-font u-font-merriweather u-text u-text-6">18/ F/ Fe​mdom</h5>
-        <div class="u-black u-container-style u-expanded-width-xs u-group u-shape-rectangle u-group-1">
-          <div class="u-container-layout u-container-layout-1">
-            <h6 class="u-custom-font u-font-merriweather u-text u-text-default-xs u-text-7"> Three time winner of annual fourth of July hotdog eating contest, this American patriot leads Shaft Holdings toward the bald eagle every day.  Jacob is a great representation of our hunger for success and our insatiability when making money. </h6>
-          </div>
+        <h6 class="u-custom-font u-font-merriweather u-text u-text-7"> Three time winner of annual fourth of July hotdog eating contest, this American patriot leads Shaft Holdings toward the bald eagle every day.  Jacob is a great representation of our hunger for success and our insatiability when making money. </h6>
+        <div class="u-black u-container-style u-group u-shape-rectangle u-group-1">
+          <div class="u-container-layout u-container-layout-1"></div>
         </div>
       </div>
     </section>
