--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <meta property="og:title" content="Home">
     <meta property="og:type" content="website">
   </head>
-  <body data-home-page="https://website3475350.nicepage.io/Home.html?version=681f9ff9-3a8a-4238-af1e-aab75faee5bb" data-home-page-title="Home" class="u-body u-xl-mode" data-lang="en">
+  <body data-home-page="https://website3475350.nicepage.io/Home.html?version=b8bc5a29-858a-48a6-8d63-28d79bf66c23" data-home-page-title="Home" class="u-body u-xl-mode" data-lang="en">
     <section class="u-black u-clearfix u-section-1" id="carousel_bbe9">
       <div class="u-clearfix u-layout-wrap u-layout-wrap-1">
         <div class="u-layout">
@@ -56,12 +56,15 @@
         <img class="u-image u-image-default u-image-1" src="images/35EC849A-BA1B-4280-9AE0-B37C722B8B31.jpg" alt="" data-image-width="836" data-image-height="1080">
         <img class="u-image u-image-default u-image-2" src="images/3F05B780-115A-4D30-A3D4-58A39B565C3D.jpg" alt="" data-image-width="571" data-image-height="551">
         <img class="u-image u-image-default u-image-3" src="images/6E6782D7-7D6A-469E-84F3-7A4D4FA8C815.jpg" alt="" data-image-width="2641" data-image-height="3131">
-        <h1 class="u-custom-font u-font-playfair-display u-text u-text-default u-title u-text-2">Bianka Kieska, CFO</h1>
+        <h1 class="u-custom-font u-font-playfair-display u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-title u-text-2">Bianka Kiszka, CFO</h1>
         <h2 class="u-custom-font u-font-playfair-display u-subtitle u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-3">Jacob Desantis, Political Advisor</h2>
         <h1 class="u-custom-font u-font-playfair-display u-text u-text-default u-title u-text-4">Samantha Moretti, CEO</h1>
-        <h5 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-5">18/ F/ Fe​mdom</h5>
+        <h5 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-5"> With an extensive family background in banking and finance all over the world, this young entrepreneur has a nose for money.&nbsp; She has singlehandedly made a name for herself as the "Crypto Cunny".</h5>
         <h6 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-6"> Three time winner of annual fourth of July hotdog eating contest, this American patriot leads Shaft Holdings toward the bald eagle every day.  Jacob is a great representation of our hunger for success and our insatiability when making money. </h6>
-        <h5 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-7"> With an extensive family background in banking and finance all over the world, this young entrepreneur has a nose for money.&nbsp; She has singlehandedly made a name for herself as the "Crypto Cunny".</h5>
+        <h5 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-7">Using her cunning business skills and extensive knowledge, Samantha erected Shaft Holdings from the ground up. As the CEO, she brings a dominant and hypnotic aura to the company and leads fiercely with an iron fist, making Shaft Holdings one of the most successful and reputable investment firms in the entire world.</h5>
+        <img class="u-image u-image-default u-image-4" src="images/A1ADBD03-C661-4AAA-B72A-968F144A0B4C.png" alt="" data-image-width="399" data-image-height="521">
+        <h3 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-default u-text-8">Ivan ​Gluvohsky, Company Intimidator&nbsp;</h3>
+        <h5 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-9">After spending four years training with former KGB agents in deepest Siberia, Ivan decided to put his extensive training to use at Shaft Holdings, protecting not only the lives of the employees, but the company honor.&nbsp;</h5>
       </div>
     </section>
     
